// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template with conditionals conditional with else 1`] = `
"Beginning of the file

The value is truthy

End of the file
"
`;

exports[`Template with conditionals conditional with else 2`] = `
"Beginning of the file

The value is falsy

End of the file
"
`;

exports[`Template with conditionals conditional with else if 1`] = `
"Beginning of the file

The value is "a"

End of the file
"
`;

exports[`Template with conditionals conditional with else if 2`] = `
"Beginning of the file

The value is "b"

End of the file
"
`;

exports[`Template with conditionals conditional with else if 3`] = `
"Beginning of the file

The value is "c"

End of the file
"
`;

exports[`Template with conditionals conditional with else if 4`] = `
"Beginning of the file

The value is other than "a", "b" or "c"

End of the file
"
`;

exports[`Template with conditionals simple conditional 1`] = `
"Beginning of the file
 The value is truthy 
End of the file
"
`;

exports[`Template with conditionals simple conditional 2`] = `
"Beginning of the file

End of the file
"
`;
